VERSION 0.x.xx
DATE xx/xx/2010
39th Alpha Release

NEWS:

NEW: [features/enhancements]
+Improve Python AutoIndenter to better handle brackets (patch from Jens)
+Add Copy Filename option to tab menu (patch from Michael Rans)
+Extend Vi emulation mode to support motions for Enter, Space, and Backspace
+Improve file type detection for files that don't have file extensions.

BUG FIXES:
+Fix Python 2.5 compatibility issue.
+Fix Unicode handling issue in Python completer.
+Fix issue with incorrect dwell events being sent causing the calltip popups
to be shown when they shouldn't even after the mouse has left the window.
+Fix bug in RemoveAllBookmarks method when called from EditraStc instance.
+Fix Unicode handling issue in Replace All feature.
+Fix issue where cursor would still appear active in the text buffer even when
it did not have the keyboard focus.
+Fix DeadObject error that could occur after deletion of a secondary main window.
+Fix incorrect tab activation that could occur after doing a tab drag and drop
operation from an external notebook.
+Fix bug in update checker that would cause the check for an update to fail.
+Fix bug in style sheet parser that could lead to a crash when loading a
malformed Editra style sheet.
+Fix Cut/Delete line commands for when the selection includes the last line.
+Fix Put command behavior in vi emulation to put it after the current carat position.

#-----------------------------------------------------------------------------#

VERSION 0.5.99
DATE 12/05/2010
38th Alpha Release

NEWS:

NEW: [features/enhancements]
+Improved consistency of Python auto-completion to provide results under more
conditions.
+Show call tips on mouse over when available. 
+When in DEBUG mode trace statements are dumped to a log file in the systems
temp directory and are kept for up to seven days.
+Update Launch plugin to version 1.8 (bug fixes)

LIBRARY:
+Add observer interface for mouse dwell events in buffer.